force-app/main/default/objects/vlocity_ps__CourtActionOutcome__c/vlocity_ps__CourtActionOutcome__c.object-meta.xml
<CustomObject>
    <label>Court Action Outcome</label>
    <nameField>
        <label>Court Action Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Court Action Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>