force-app/main/default/objects/vlocity_ps__CourtActionOutcome__c/fields/vlocity_ps__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Court Action Outcomes</relationshipLabel>
    <relationshipName>CourtActionOutcomeContacts</relationshipName>
    <type>Lookup</type>
</CustomField>