force-app/main/default/objects/vlocity_ps__CourtActionOutcome__c/fields/vlocity_ps__CourtActionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CourtActionId__c</fullName>
    <label>Court Action</label>
    <referenceTo>vlocity_ps__CourtAction__c</referenceTo>
    <relationshipLabel>Court Action Outcomes</relationshipLabel>
    <relationshipName>CourtActionOutcomeCourtActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>