force-app/main/default/objects/vlocity_ps__CourtActionOutcome__c/fields/vlocity_ps__EpisodeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EpisodeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Episode</label>
    <referenceTo>vlocity_ps__Episode__c</referenceTo>
    <relationshipLabel>Court Action Outcomes</relationshipLabel>
    <relationshipName>CourtActionOutcomeEpisodes</relationshipName>
    <type>Lookup</type>
</CustomField>